[package]
name = "genetic-files"
version = "1.0.0"
description = "A utility for mating...files?"
repository = "https://github.com/vadixidav/genetic-files"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
keywords = ["file", "files", "mate", "genetic"]
license = "BSD-2-Clause"

[[bin]]
name = "matef"
path = "src/main.rs"

[dependencies]
itertools = "0.4.11"
clap = "2.1.2"
rand = "0.3.14"
